--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Onest:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@font-face {
+  font-family: 'Otterco';
+  src: url('./assets/Fonts/Otterco-Medium.otf');
+  font-weight: normal;
+  font-style: normal;
+}
 html, body {
     font-family: 'Onest', sans-serif;
     margin: 0;
     padding: 0;
   }
   
+  a{
+    text-decoration: none;
+  }
  
