--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,9 +10,11 @@ html, body {
     font-family: 'Onest', sans-serif;
     margin: 0;
     padding: 0;
+    overflow: hidden;
+    width: 110%;
   }
+  
   
   a{
     text-decoration: none;
   }
- 
