--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,6 +15,20 @@ html, body {
   }
   
   
-  a{
-    text-decoration: none;
+  a {
+    color: inherit; 
+    text-decoration: none; 
   }
+  
+  a:visited {
+    color: inherit; 
+  }
+  
+  a:hover {
+    color: inherit; 
+  }
+  
+  a:active {
+    color: inherit; 
+  }
+  
